# rules_tectonic

./: .bazelrc  .gitignore  AGENTS.md  BUILD.bazel  CHANGELOG.md  MODULE.bazel  README.md  flake.nix
.bcr/: config.yml  metadata.template.json  presubmit.yml
.github/workflows/: ci.yml  release.yml
docs/: BUILD.bazel  RELEASING.md  check_defs_docs.sh  defs.md
e2e/bzlmod/: .bazelrc  BUILD.bazel  MODULE.bazel  hello.tex
examples/: BUILD.bazel  hello.tex  verify_outputs.sh
scripts/: make-release-archive.sh  render-bcr-entry.sh
tectonic/: BUILD.bazel  defs.bzl  extensions.bzl
tectonic/private/: BUILD.bazel  platforms.bzl  tectonic_pdf.bzl  tectonic_repository.bzl  tectonic_toolchain.bzl
